frontend/src/app/globals.css
@import "tailwindcss";
@import "tailwindcss/utilities";

@custom-variant dark (&:where(.dark, .dark *));

@layer base {
  :root {
    --background: #efefef;
    --primary: #24f89c;
    --primary-80: #00ff9131;
    --foreground: #000000;
    --varWhite: #ffffff;
    --varBlack: #000000;
  }

  .dark {
    --background: #0a0a0a;
    --foreground: #ededed;
    --primary: #24f89c;
    --varWhite: #222222;
    --varBlack: #ffffff;
  }

  body {
    background: var(--background);
    color: var(--foreground);
    font-family: Arial, Helvetica, sans-serif;
    border: none;
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-primary-80: var(--primary-80);
  --color-varWhite: var(--varWhite);
  --color-varBlack: var(--varBlack);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

